Fix content not hidden by cover

--- a/src/styles/_cover.scss
+++ b/src/styles/_cover.scss
@@ -122,7 +122,7 @@
 
 .h5p-container {
   &.covered {
-    .h5p-content-controls {
+    .h5p-interactive-book-main {
       display: none;
     }
   }
